# maldness_bot

./: Cargo.toml  Dockerfile  diesel.toml  readme.md
.github/: FUNDING.yml
migrations/2021-07-07-070128_create_users/: down.sql  up.sql
migrations/2021-07-07-091446_add_location_fields_for_users/: down.sql  up.sql
migrations/2021-07-10-103428_create_sleep_events/: down.sql  up.sql
migrations/2021-07-15-120923_abstract_afk_events/: down.sql  up.sql
migrations/2021-07-19-094126_add_first_last_user_names/: down.sql  up.sql
src/: cache.rs  commands.rs  errors.rs  globals.rs  helpers.rs  main.rs  schema.patch  schema.rs  services.rs  settings.rs  updates.rs
src/commands/: donate.rs  gn.rs  rafk.rs  set_my_location.rs  set_paying_status.rs  shuffle.rs  up.rs  weather.rs  work.rs
src/services/: afk_event.rs  sleep.rs  user.rs  weather.rs
src/services/afk_event/: errors.rs  functions.rs
src/services/sleep/: errors.rs  functions.rs
src/services/user/: errors.rs  functions.rs
