[package]
name = "maldness_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.5"
postgres = { version = "0.19.1", features = ["with-time-0_2", "with-serde_json-1"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
config = "0.11"
ureq = { version = "2.1.1", features = ["json"] }