[package]
name = "maldness_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
frankenstein = "0.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
config = "0.11"
ureq = { version = "2.1.1", features = ["json"] }
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "chrono"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel" }
liquid = "0.22.0"
humantime = "2.1.0"